# svcexample

./: Cargo.toml  README.md
.cargo/: config.toml
src/: err.rs  install.rs  main.rs  service.rs  uninstall.rs
